--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -11,40 +11,50 @@
         android:background="@drawable/card_border"
         android:padding="16dp">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/product_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/circle_background"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/product_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/modal_price" />
+            app:layout_constraintTop_toBottomOf="@id/modal_price">
 
-        <TextView
-            android:id="@+id/product_text"
-            style="@style/h4_bold"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Nama Produk"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/product_image"
-            app:layout_constraintTop_toTopOf="@id/product_image" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/product_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/circle_background"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/supplier_text"
-            style="@style/p"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="(Pelanggan)"
-            app:layout_constraintStart_toStartOf="@id/product_text"
-            app:layout_constraintTop_toBottomOf="@id/product_text" />
+            <TextView
+                android:id="@+id/product_text"
+                style="@style/h4_bold"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="Nama Produk"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/product_image"
+                app:layout_constraintTop_toTopOf="@id/product_image" />
+
+            <TextView
+                android:id="@+id/supplier_text"
+                style="@style/p"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="(Pelanggan)"
+                app:layout_constraintStart_toStartOf="@id/product_text"
+                app:layout_constraintTop_toBottomOf="@id/product_text" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <TextView
@@ -52,52 +62,83 @@
             style="@style/p"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Modal : "
+            android:text="Modal :"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="x"
+            android:layout_marginBottom="2dp"
+            app:layout_constraintTop_toTopOf="@id/priceEdit"
+            app:layout_constraintBottom_toBottomOf="@id/priceEdit"
+            app:layout_constraintStart_toEndOf="@id/quantityLayout"
+            app:layout_constraintEnd_toStartOf="@id/priceEdit"/>
+
+        <TextView
+            android:id="@+id/total_price"
+            style="@style/h4_bold"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:text="Rp100.000.000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/priceEdit"
+            app:layout_constraintBottom_toBottomOf="@id/priceEdit"
+            android:textAlignment="textStart"
+            android:textColor="@color/black" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="="
+            android:layout_marginBottom="2dp"
+            app:layout_constraintTop_toTopOf="@id/total_price"
+            app:layout_constraintBottom_toBottomOf="@id/total_price"
+            app:layout_constraintStart_toEndOf="@id/priceEdit"
+            app:layout_constraintEnd_toStartOf="@id/total_price"/>
+
         <EditText
             android:id="@+id/priceEdit"
             style="@style/h4"
-            android:layout_width="0dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="24dp"
-            android:hint="Rp10.000.000.000"
+            android:hint="100.000.000"
             android:inputType="numberDecimal"
+            android:maxLength="11"
+            android:textAlignment="textEnd"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/quantityLayout"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/supplier_text"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintEnd_toStartOf="@id/total_price"
+            app:layout_constraintStart_toEndOf="@id/quantityLayout"
+            app:layout_constraintTop_toTopOf="@id/quantityLayout"
+            app:layout_constraintBottom_toBottomOf="@id/quantityLayout"/>
 
         <LinearLayout
             android:id="@+id/lowest_unit_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/product_image">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/quantityLayout">
 
             <Spinner
                 android:id="@+id/unitsSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="-16dp"
                 android:layout_gravity="end"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/product_image" />
+                android:layout_marginEnd="-16dp" />
 
             <TextView
                 android:id="@+id/lowest_unit_quantity"
                 style="@style/p"
-                android:layout_gravity="end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:layout_marginEnd="4dp"
                 android:text="(200 ikat)" />
         </LinearLayout>
@@ -110,15 +151,15 @@
             android:background="@drawable/quantity_background"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingHorizontal="10dp"
+            android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lowest_unit_layout">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/product_data">
 
             <ImageButton
                 android:id="@+id/btnMinus"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Decrease quantity"
                 android:src="@drawable/ic_remove" />
@@ -126,21 +167,22 @@
             <EditText
                 android:id="@+id/quantityText"
                 style="@style/h4_bold"
-                android:maxLength="9"
-                android:layout_width="50dp"
+                android:layout_width="32dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="18dp"
+                android:layout_marginHorizontal="8dp"
                 android:layout_marginBottom="-2dp"
                 android:inputType="number"
+                android:maxLength="9"
                 android:paddingTop="0dp"
-                android:text="23444"
+                android:paddingBottom="8dp"
+                android:text="1"
                 android:textAlignment="center"
                 android:textColor="@color/black" />
 
             <ImageButton
                 android:id="@+id/btnPlus"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Increase quantity"
                 android:src="@drawable/ic_plus_thin" />
