--- a/app/src/main/res/navigation/nav_product.xml
+++ b/app/src/main/res/navigation/nav_product.xml
@@ -24,5 +24,9 @@
         <argument
             android:name="productId"
             app:argType="integer" />
+
+        <action
+            android:id="@+id/action_addProductPricesFragment_to_detailProductFragment"
+            app:destination="@id/detailProductFragment" />
     </fragment>
 </navigation>
