--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -81,6 +81,10 @@
         <action
             android:id="@+id/action_detailProductFragment_to_addProductPricesFragment"
             app:destination="@id/addProductPricesFragment" />
+        <action
+            android:id="@+id/action_detailProductFragment_to_productFragment"
+            app:destination="@id/productFragment"
+            />
     </fragment>
 
     <fragment
